--- a/2columnlayout.css
+++ b/2columnlayout.css
@@ -1,10 +1,13 @@
 body, html{
-    margin:auto;
-    padding:10px;
+    margin:0%;
+    padding:0%;
     color:rgb(0, 0, 0);
     background:#ffffff;
 }  
 
+*{
+    box-sizing: border-box;
+  }
 #wrap{
         width: 100%;
         margin: auto;
@@ -36,7 +39,7 @@ background-color: #f1f1f1;
     background-color: #4CAF50;
     color: white;
 }
-/*link changes colour on hovor */
+/*link changes colour on hover */
 li a:hover:not(.active) {
     background-color: #555;
     color: white;
@@ -47,32 +50,32 @@ li a:hover:not(.active) {
 #main{
     background: #99cc99;
     float: left;
-    width: 375px;
-    height:400px;
+    width: 31.3%;
+    height:500px;
     background:#9c9;
-    margin:10px;
-    border:0px;
+    margin:1%;
+    border:1%;
     padding:10px;
 }
 #sidebar{
     background: #cc99cc;
     float: left;
-    width: 375px;
-    height:400px;
+    width: 31.3%;
+    height:500px;
     background:#c9c;
-    margin:10px;
-    border:0px;
+    margin:1%;
+    border:1%;
     padding:10px;
    
 }
 #sidebar2{
     background: seagreen;
     float: left;
-    width: 375px;
-    height:400px;
+    width: 31.3%;
+    height:500px;
     background: seashell;
-    margin:10px;
-    border:0px;
+    margin:1%;
+    border:1%;
     padding:10px;
 }
 
@@ -83,3 +86,22 @@ li a:hover:not(.active) {
     border:auto;
 }
 
+@media only screen and (max-width: 600px) {
+    #main{
+        background: #99cc99;
+        float: left;
+        width: 100%;
+        height:500px;
+    }
+    #sidebar{
+        background: #cc99cc;
+        float: left;
+        width: 100%;
+        height:500px; 
+    }
+    #sidebar2{
+        background: seagreen;
+        float: left;
+        width: 100%;
+        height:500px;
+    }
