--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body, html{
     margin:0%;
     padding:0%;
     color:rgb(0, 0, 0);
-    background:#ffffff;
+    background:#452858;
 }  
 
 *{
@@ -11,14 +11,14 @@ body, html{
 #wrap{
         width: 100%;
         margin: auto;
-        background:#99c;
+        background:#452858;
 }
 
 #header{
     background: #dddddd;
 }
 #nav{
-    background:#c99;
+    background:#99c;
 }
 #ul{
 list-style-type:none;
@@ -48,39 +48,39 @@ li a:hover:not(.active) {
 
 
 #main{
-    background: #99cc99;
+    background: #452858;
     float: left;
-    width: 31.3%;
-    height:500px;
-    background:#9c9;
+    width: 31%;
+    height:680px;
+    background:#99C;
     margin:1%;
     border:1%;
     padding:10px;
 }
 #sidebar{
-    background: #cc99cc;
+    background: #452858;
     float: left;
-    width: 31.3%;
-    height:500px;
-    background:#c9c;
+    width: 31%;
+    height:680px;
+    background:#99C;
     margin:1%;
     border:1%;
     padding:10px;
    
 }
 #sidebar2{
-    background: seagreen;
+    background: #452858;
     float: left;
-    width: 31.3%;
-    height:500px;
-    background: seashell;
+    width: 31%;
+    height:680px;
+    background: #99c;
     margin:1%;
     border:1%;
     padding:10px;
 }
 
 #footer{
-    background: #cccc99;
+    background: #99c;
     clear:both;
     margin:auto;
     border:auto;
@@ -88,21 +88,15 @@ li a:hover:not(.active) {
 
 @media only screen and (max-width: 600px) {
     #main{
-        background: #99cc99;
+        background: #99c;
         float: left;
         width: 100%;
         height:500px;
     }
     #sidebar{
-        background: #cc99cc;
+        background: #99c;
         float: left;
         width: 100%;
         height:500px; 
-    }
-    #sidebar2{
-        background: seagreen;
-        float: left;
-        width: 100%;
-        height:500px;
     }
 }
