--- a/security.css
+++ b/security.css
@@ -2,7 +2,7 @@ body, html{
     margin:0%;
     padding:0%;
     color:rgb(0, 0, 0);
-    background: #452858;
+    background:#452858;
 }  
 
 *{
@@ -11,28 +11,37 @@ body, html{
 #wrap{
         width: 100%;
         margin: auto;
-        background:#99c;
+        background:#452858;
 }
 
 #header{
-    background: #dddddd;
+    background: #fae3d5;
+    border:solid;
+    border-left: none;
+    border-right: none;
+    padding:8px;
 }
 #nav{
-    background:burlywood;
+    background:#99c;
 }
-#ul{
-list-style-type:none;
-margin: 0;
-padding: 0;
-width: 60px;
-background-color: #f1f1f1;
+#nav_ul{
+    list-style-type: none;
+    border:solid;
+    border-top-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: #99c;
 }   
 
 
-#li a{
-    display: block;
+li a{
+    display: inline;
+    border:solid;
+    border-top-style: none;
     color: #000000;
-    padding: 8px 16px;
+    background-color: #99c;
+    padding: 8px;
+    float: left;
     text-decoration: none;
 }
 #li a.active {
@@ -48,43 +57,55 @@ li a:hover:not(.active) {
 
 
 #main{
-    background: wheat;
+    background: #452858;
     float: left;
-    width: 48%;
+    width: 31%;
     height:680px;
-    background: #99c;
+    background:#99C;
     margin:1%;
-    border:1%;
+    border:solid;
     padding:10px;
 }
 #sidebar{
-    background: wheat;
-    float: right;
-    width: 48%;
+    background: #452858;
+    float: left;
+    width: 31%;
     height:680px;
-    background:#99c;
+    background:#99C;
     margin:1%;
-    border:1%;
+    border:solid;
     padding:10px;
    
 }
+#sidebar2{
+    background: #452858;
+    float: left;
+    width: 31%;
+    height:680px;
+    background: #99c;
+    margin:1%;
+    border:solid;
+    padding:10px;
+}
 
 #footer{
-    background: #99C;
+    background: #99c;
     clear:both;
     margin:auto;
-    border:auto;
+    border:solid;
+    border-left: none;
+    border-right: none;
 }
 
 @media only screen and (max-width: 600px) {
     #main{
-        background: #99C;
+        background: #99c;
         float: left;
         width: 100%;
         height:500px;
     }
     #sidebar{
-        background: #99C;
+        background: #99c;
         float: left;
         width: 100%;
         height:500px; 
