--- a/pic.css
+++ b/pic.css
@@ -2,7 +2,7 @@ body, html{
     margin:0%;
     padding:0%;
     color:rgb(0, 0, 0);
-    background:#452858;
+    background:#99c;
 }  
 
 *{
@@ -10,39 +10,55 @@ body, html{
   }
 #wrap{
         width: 100%;
-        margin: auto;
-        background:#452858;
+        margin:0 auto;
+        background:#99c;
+}
+
+#logo{
+    background: lemonchiffon;
+    border: solid;
+    border-left: none;
+    padding: 8px;
 }
 
 #header{
     background: #fae3d5;
     border:solid;
     border-left: none;
-    border-right: none;
     padding:8px;
 }
 #nav{
-    background:#99c;
+    background-color:#99c;
+    list-style: none;
+    width: 100%;
+    display: table;
+    text-align: center;
 }
 #nav_ul{
     list-style-type: none;
-    border:solid;
     border-top-style: none;
+    display: table;
     margin: 0;
     padding: 0;
+    content: "";
+    width: 100%;
+    clear: both;
     background-color: #99c;
 }   
 
-
 li a{
-    display: inline;
+    display: table;
     border:solid;
-    border-top-style: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
     color: #000000;
     background-color: #99c;
     padding: 8px;
     float: left;
     text-decoration: none;
+    width: auto;
 }
 #li a.active {
     background-color: #4CAF50;
@@ -57,35 +73,22 @@ li a:hover:not(.active) {
 
 
 #main{
-    background: #452858;
-    float: left;
-    width: 31%;
-    height:680px;
-    background:#99C;
-    margin:1%;
-    border:solid;
-    padding:10px;
-}
-#sidebar{
-    background: #452858;
-    float: left;
-    width: 31%;
-    height:680px;
-    background:#99C;
-    margin:1%;
-    border:solid;
-    padding:10px;
-   
-}
-#sidebar2{
-    background: #452858;
-    float: left;
-    width: 31%;
-    height:680px;
     background: #99c;
-    margin:1%;
+    float:right;
+    width: 50.60%;
+    height: 658px;;
+    background:#99C;
     border:solid;
+    border-right: none;
+    border-bottom: none;
     padding:10px;
+}
+
+#skimg{
+    float: left;
+    max-width: 100%;
+    height: auto;
+    border-top: solid;
 }
 
 #footer{
